# Hackathon-2025-sfscon-MechaLink

./: .gitignore  LICENSE  Makefile  README.md  contributing.md  docker-compose.yml  main.py  pyproject.toml  setup.py
data/: postmaster.pid
data/base/1/: 1259  2619  2619_vm  2696  pg_internal.init
data/base/16384/: 1247  1249  1259  1259_fsm  16389  16394  16396  16400  16401  16408  16413  16420  16426  16427  16434  16438  16439  16451  16456  16468  16473  16485  16491  16492  16494  16497  16504  16508  16509  16516  16520  16521  16528  16531  16538  16538_fsm  16538_vm  16543  16550  16553  (+60 more)
data/base/5/: pg_internal.init
data/global/: 1260  1262  2671  pg_control  pg_internal.init
query/: query.sql  trigger.sql
src/: main.py  unix_conv.py
src/computation_layer/: Dockerfile  computation_layer.py
src/ingestion/: create_table.py  fact_data.py  last_ingestion.py  master_data.py
src/ingestion/robot_api/: robots.py
src/serving_layer/: Dockerfile  serving_layer.py
streamlit_app/: Dockerfile  Makefile  app.py  requirements.txt
streamlit_app/pages/: analytics.py  cleaning.py  delivery.py  home.py  industrial.py  launch_task.py  predictiveAnalytics.py  robotCleaningMonitoring.py  robotDeliveringMonitoring.py  robotLiftingMonitoring.py  settings.py  task.py
streamlit_app/utils/: helpers.py
