[project]
name = "noi-hackaton"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
]
