[project]
name = "MechaLink"
version = "0.1.0"
description = "A comprehensive and extensive management platform for robot fleets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.0",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly-express>=0.4.1",
    "psycopg[binary]>=3.2.12",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
]
